# yew-state-infinite-loop-bug

./: Cargo.toml
src/: main.rs
